--- a/css/global.css
+++ b/css/global.css
@@ -7,7 +7,7 @@ body {
     background: black;
 }
 
-#loginForm {
+#container {
     background-image: url("/images/kingBrandTrans.png");
     height: 100%;
     width: 100%;
@@ -38,4 +38,9 @@ body {
     font-size: 24px;
     text-align: center;
     padding-bottom: 12px;
+}
+
+#volume {
+    position: absolute;
+    z-index: 1;
 }
