--- a/css/game.css
+++ b/css/game.css
@@ -15,11 +15,32 @@ body {
     border-top: 5px solid white;
 }
 
-#knightArea #info {
-    flex: 0.17;
+#knightArea #info{
+    flex: 0.12;
+    min-width: 13em;
     display: flex;
     flex-wrap: wrap;
 }
+
+.coolText {
+    font-weight: bold;
+    text-shadow: 0 0 5px white;
+    font-size: 28px;
+    text-align: center;
+}
+
+.infoText{
+    font-weight: bold;
+    font-size: 32px;
+    text-align: center;
+    position: relative;
+    top: 40%;
+}
+
+.healthText { text-shadow: 0 0 5px rgb(0,255,0); }
+.mpText { text-shadow: 0 0 5px rgb(0,128,255); }
+.deckText { text-shadow: 0 0 5px rgb(255,0,0); }
+.heroPowerUnused { text-shadow: 0 0 3px rgb(255,255,0),  0 0 5px rgb(255,128,0); }
 
 #knightArea #health, #knightArea #MP {
     height: 7em;
@@ -60,13 +81,7 @@ body {
     text-align: center;
 }
 
-.menuBtn {
-    margin: 0.5em;
-    padding: 0.3em 0.5em;
-}
-
 #radianceArea {
-    position: absolute;
     display: flex;
     flex-wrap: nowrap;
     text-align: center;
@@ -81,10 +96,12 @@ body {
     background-image: url("/images/inGame/cardBack.jpg");
     background-repeat: no-repeat;
     background-size: contain;
+    background-position: center;
 }
 
 #radianceArea #radianceHand {
     flex: 0.4;
+    display: flex;
 }
 
 #radianceArea #radianceHealth {
@@ -96,24 +113,68 @@ body {
     background-position-y: -4em;
 }
 
+#radianceArea #radianceHealth div {
+    top: 60%;
+}
+
 #radianceArea #radianceMP {
     background-image: url("/images/inGame/RadianceMP.png");
-    background-position: left;
+    background-position: center;
     background-repeat: no-repeat;
-    background-size:contain;
+    background-size: contain;
     flex: 0.5;
 }
 
+.radianceHandCard {
+    height: 100%;
+    min-width: 2em;
+    background-image: url("/images/inGame/cardBack.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-left: 0.25em;
+    margin-right: 0.25em;
+}
+
+#playArea {
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+
+.board {
+    display: flex;
+}
+
+#radianceBoard {
+    min-height: 17em;
+
+}
+
+#knightBoard {
+    position: relative;
+    bottom: 0px;
+}
+
+
 .card {
     flex:1;
+    font-size: 14px;
     padding: 1em;
-    height: 17em;
-    margin: auto;
+    max-height: 17em;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 7em;
     color: white;
+    border: 1px solid white;
 }
 
 .cardHover {
     background-color:blue;
+}
+
+.cardNotHover {
+    background-color: #2e376d85;
 }
 
 .cardSprite {
@@ -123,4 +184,9 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+}
+
+.menuBtn {
+    margin: 0.5em;
+    padding: 0.3em 0.5em;
 }
