--- a/css/lobby.css
+++ b/css/lobby.css
@@ -5,8 +5,9 @@
 body {
     background-image: url("/images/Stag.gif");
     background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     height: 100%;
-    background-size: contain;
 }
 
 #chatDiv {
